[gd_scene load_steps=4 format=2]

[ext_resource path="res://GameObjects/Factory/FactoryMachine.gd" type="Script" id=1]

[sub_resource type="ConcavePolygonShape" id=2]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[sub_resource type="CubeMesh" id=1]

[node name="FactoryMachine" type="StaticBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = null

[node name="WorkTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Control" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -250.0
margin_right = 250.0
margin_bottom = 250.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 493.0
margin_bottom = 493.0
alignment = 2

[node name="WorkButton" type="Button" parent="CanvasLayer/Control/PanelContainer/VBoxContainer"]
margin_top = 328.0
margin_right = 486.0
margin_bottom = 378.0
rect_min_size = Vector2( 0, 50 )
text = "Start Work"

[node name="WorkProgressBar" type="ProgressBar" parent="CanvasLayer/Control/PanelContainer/VBoxContainer"]
margin_top = 382.0
margin_right = 486.0
margin_bottom = 432.0
rect_min_size = Vector2( 0, 50 )
max_value = 3.0

[node name="CloseButton" type="Button" parent="CanvasLayer/Control/PanelContainer/VBoxContainer"]
margin_top = 436.0
margin_right = 486.0
margin_bottom = 486.0
rect_min_size = Vector2( 0, 50 )
text = "EXIT"

[connection signal="on_interact" from="." to="." method="view_machine"]
[connection signal="timeout" from="WorkTimer" to="." method="_on_WorkTimer_timeout"]
[connection signal="pressed" from="CanvasLayer/Control/PanelContainer/VBoxContainer/WorkButton" to="." method="start_work"]
[connection signal="pressed" from="CanvasLayer/Control/PanelContainer/VBoxContainer/CloseButton" to="." method="stop_viewing_machine"]
